# emfem

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: CMakeLists.txt  em_ctx.cc  em_ctx.h  em_defs.h  em_fe.cc  em_fe.h  em_fwd.cc  em_fwd.h  em_io.cc  em_io.h  em_la.cc  em_la.h  em_main.cc  em_mesh.cc  em_mesh.h  em_pw.h  em_utils.cc  em_utils.h
